# embedded-pot-test

./: LICENSE  README.md
step1/: CMakeLists.txt
step1/src/: controller.c
step1/test/: test.cpp
step2/: CMakeLists.txt  run_test.sh  run_test_coverage.sh
step2/src/: controller.c
step2/test/: interface_mock.h  test.cpp
step3/: CMakeLists.txt
step3/src/: controller.h  interface.h
step3/test/: interface_mock.cpp  test.cpp
